--- a/.github/workflows/release_ios.yml
+++ b/.github/workflows/release_ios.yml
@@ -73,10 +73,11 @@ jobs:
       # Step : Build the App
       - name: Build the iOS app
         run: |
+          xcrun simctl install runtime com.apple.CoreSimulator.SimRuntime.iOS-18-2
           xcodebuild clean build \
             -project $GITHUB_WORKSPACE/iosApp/iosApp.xcodeproj \
             -scheme iosApp \
-            -sdk iphoneos18.1 \
+            -sdk iphoneos18.2 \
             -configuration Release \
             -archivePath $GITHUB_WORKSPACE/build/OasisShoreditch.xcarchive \
             -destination 'generic/platform=iOS' \
