--- a/.github/workflows/release_ios.yml
+++ b/.github/workflows/release_ios.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Set up Xcode
         uses: maxim-lobanov/setup-xcode@v1
         with:
-          xcode-version: "16.2"  # Update this to match your Xcode version
+          xcode-version: "16.1"
 
       # Decode Keystore and secrets.properties
       - name: Decode secrets and keystore
@@ -79,7 +79,8 @@ jobs:
             -sdk iphoneos18.2 \
             -configuration Release \
             -archivePath $GITHUB_WORKSPACE/build/OasisShoreditch.xcarchive \
-            -destination "platform=iOS Simulator,OS=18.2,name=iPhone 14" \
+            -destination 'generic/platform=iOS' \
+#            -destination "platform=iOS Simulator,OS=18.2,name=iPhone 14" \
             -verbose
         env:
           API_KEY_PATH: "~/.appstoreconnect/private_keys/AuthKey_${{ secrets.APPLE_KEY_ID }}.p8"
