--- a/.github/workflows/release_ios.yml
+++ b/.github/workflows/release_ios.yml
@@ -76,10 +76,10 @@ jobs:
           xcodebuild clean build \
             -project $GITHUB_WORKSPACE/iosApp/iosApp.xcodeproj \
             -scheme iosApp \
-            -sdk iphoneos18.2 \
+            -sdk iphoneos18.1 \
             -configuration Release \
             -archivePath $GITHUB_WORKSPACE/build/OasisShoreditch.xcarchive \
-            -destination 'generic/platform=iOS' \
+            -destination "platform=iOS Simulator,OS=18.1,name=iPhone 14" \
             -verbose
         env:
           API_KEY_PATH: "~/.appstoreconnect/private_keys/AuthKey_${{ secrets.APPLE_KEY_ID }}.p8"
