test ios ci build #29

--- a/.github/workflows/release_ios.yml
+++ b/.github/workflows/release_ios.yml
@@ -76,10 +76,9 @@ jobs:
           xcodebuild clean build \
             -project $GITHUB_WORKSPACE/iosApp/iosApp.xcodeproj \
             -scheme iosApp \
-            -sdk iphoneos18.1 \
+            -sdk iphoneos \
             -configuration Release \
             -archivePath $GITHUB_WORKSPACE/build/OasisShoreditch.xcarchive \
-            -destination "platform:iOS Simulator, id:2CCF4D8C-F054-43EC-8738-C8C5FA67B92D, OS:18.1, name:iPhone 15 Plus" \
             -verbose
         env:
           API_KEY_PATH: "~/.appstoreconnect/private_keys/AuthKey_${{ secrets.APPLE_KEY_ID }}.p8"
