--- a/.github/workflows/release_ios.yml
+++ b/.github/workflows/release_ios.yml
@@ -82,7 +82,7 @@ jobs:
           <plist version="1.0">
           <dict>
               <key>method</key>
-              <string>ad-hoc</string>
+              <string>development</string>
               <key>teamID</key>
               <string>$TEAM_ID</string>
               <key>uploadSymbols</key>
