set for main branch

--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -2,7 +2,7 @@ name: Develop CI
 
 on:
   push:
-    branches: [ "main", "feature/*", "bugfix/*" ]
+    branches: [ "main", "develop", "feature/*", "bugfix/*" ]
 
 jobs:
   build-develop:
