--- a/.github/workflows/release_ios.yml
+++ b/.github/workflows/release_ios.yml
@@ -2,7 +2,7 @@ name: iOS Release CI
 
 on:
   push:
-    branches: [ none ]
+    branches: [ "main" ]
 
 jobs:
   build:
@@ -12,7 +12,7 @@ jobs:
     steps:
       # Step : Checkout Code
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       # Step : Set Up JDK for Gradle
       - name: Set up JDK
@@ -25,43 +25,95 @@ jobs:
       - name: Set up Xcode
         uses: maxim-lobanov/setup-xcode@v1
         with:
-          xcode-version: "16.2"  # Update this to match your Xcode version
+          xcode-version: "16.1"
 
       # Decode Keystore and secrets.properties
       - name: Decode secrets and keystore
         run: |
-          echo "$KEYSTORE_BASE64" | base64 --decode > $GITHUB_WORKSPACE/oasis-release-upload-keystore.jks
           echo "$SECRETS_FILE" > $GITHUB_WORKSPACE/secrets.properties
+          echo "$SECRETS_XCCONFIG" > $GITHUB_WORKSPACE/iosApp/Configuration/Secrets.xcconfig
         env:
           KEYSTORE_BASE64: ${{ secrets.KEYSTORE_BASE64 }}
           SECRETS_FILE: ${{ secrets.SECRETS_FILE }}
+          SECRETS_XCCONFIG: ${{ secrets.SECRETS_XCCONFIG }}
 
-#      # Step : Build the KMM Framework
-#      - name: Build KMM Framework
-#        run: |
-#          ./gradlew :composeApp:embedAndSignAppleFrameworkForXcode -PxcodeConfiguration=Release -Pkotlin.native.cocoapods.generateWrapper=false -PxcodeTargetArchs=arm64 -Pkotlin.native.targets=iosArm64,iosSimulatorArm64 --info
-      - name: Build KMM Framework
+      - name: Install the Apple certificate and provisioning profile
+        env:
+          BUILD_CERTIFICATE_BASE64: ${{ secrets.APPLE_BUILD_CERTIFICATE_BASE64 }}
+          P12_PASSWORD: ${{ secrets.APPLE_P12_PASSWORD }}
+          BUILD_PROVISION_PROFILE_BASE64: ${{ secrets.APPLE_BUILD_PROVISION_PROFILE_BASE64 }}
+          KEYCHAIN_PASSWORD: ${{ secrets.APPLE_KEYCHAIN_PASSWORD }}
         run: |
-          ./gradlew :composeApp:linkReleaseFrameworkIosArm64
-          ./gradlew :composeApp:linkReleaseFrameworkIosSimulatorArm64
+          # create variables
+          CERTIFICATE_PATH=$RUNNER_TEMP/build_certificate.p12
+          PP_PATH=$RUNNER_TEMP/build_pp.mobileprovision
+          KEYCHAIN_PATH=$RUNNER_TEMP/app-signing.keychain-db
 
-      # Step : Build the App
+          # import certificate and provisioning profile from secrets
+          echo -n "$BUILD_CERTIFICATE_BASE64" | base64 --decode -o $CERTIFICATE_PATH
+          echo -n "$BUILD_PROVISION_PROFILE_BASE64" | base64 --decode -o $PP_PATH
+
+          # create temporary keychain
+          security create-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
+          security set-keychain-settings -lut 21600 $KEYCHAIN_PATH
+          security unlock-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
+
+          # import certificate to keychain
+          security import $CERTIFICATE_PATH -P "$P12_PASSWORD" -A -t cert -f pkcs12 -k $KEYCHAIN_PATH
+          security set-key-partition-list -S apple-tool:,apple: -k "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
+          security list-keychain -d user -s $KEYCHAIN_PATH
+
+          # apply provisioning profile
+          mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles
+          cp $PP_PATH ~/Library/MobileDevice/Provisioning\ Profiles
+
+      # create provisioning profile https://developer.apple.com/account/resources/profiles/add
+      - name: Create exportOptions.plist
+        env:
+          TEAM_ID: ${{ secrets.APPLE_TEAM_ID }}
+        run: |
+          cat << EOF > exportOptions.plist
+          <?xml version="1.0" encoding="UTF-8"?>
+          <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+          <plist version="1.0">
+          <dict>
+              <key>method</key>
+              <string>development</string>
+              <key>teamID</key>
+              <string>$TEAM_ID</string>
+              <key>uploadSymbols</key>
+              <false/>
+              <key>uploadBitcode</key>
+              <true/>
+              <key>compileBitcode</key>
+              <true/>
+              <key>provisioningProfiles</key>
+              <dict>
+                  <key>com.house-shoreditch.app.OasisShoreditch</key>
+                  <string>robs_dev</string>
+              </dict>
+          </dict>
+          </plist>
+          EOF
+
       - name: Build the iOS app
         run: |
-          xcodebuild clean build \
-            -project $GITHUB_WORKSPACE/iosApp/iosApp.xcodeproj \  # Change to your app workspace
-            -scheme iosApp \          # Change to your app scheme
-            -sdk iphoneos                   \
+          xcodebuild clean archive \
+            -project $GITHUB_WORKSPACE/iosApp/iosApp.xcodeproj \
+            -scheme iosApp \
+            -sdk iphoneos \
             -configuration Release \
-            -archivePath $GITHUB_WORKSPACE/build/Oasis.xcarchive
+            -archivePath $GITHUB_WORKSPACE/build/OasisShoreditch.xcarchive \
+            -verbose
+        env:
+          API_KEY_PATH: "~/.appstoreconnect/private_keys/AuthKey_${{ secrets.APPLE_KEY_ID }}.p8"
 
-      # Step 5: Export the IPA (App Bundle)
-      # create provisioning profile https://developer.apple.com/account/resources/profiles/add
+      # Export the IPA (App Bundle)
       - name: Export IPA
         run: |
           xcodebuild -exportArchive \
-            -archivePath $GITHUB_WORKSPACE/build/Oasis.xcarchive \
-            -exportOptionsPlist exportOptions.plist \   # generate exportOptions.plist using Product>Archive in xcode
+            -archivePath $GITHUB_WORKSPACE/build/OasisShoreditch.xcarchive \
+            -exportOptionsPlist exportOptions.plist \
             -exportPath $GITHUB_WORKSPACE/build
 
       # Step : Upload the IPA as an artifact
