--- a/composeApp/src/androidMain/AndroidManifest.xml
+++ b/composeApp/src/androidMain/AndroidManifest.xml
@@ -5,8 +5,8 @@
     <package android:name="com.google.android.gm"/>
     </queries>
     <application
-        android:allowBackup="true"
-        android:icon="@mipmap/ic_osric_luncher"
+        android:allowBackup="false"
+        android:icon="@mipmap/ic_oasis_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@android:style/Theme.Material.Light.NoActionBar"
