--- a/.github/workflows/release_ios.yml
+++ b/.github/workflows/release_ios.yml
@@ -121,3 +121,21 @@ jobs:
         with:
           name: iOS-App
           path: build/*.ipa
+
+      - name: Upload to TestFlight
+        env:
+          APPLE_ID: ${{ secrets.APPLE_APP_UPLOAD_USERID }}
+          APP_SPECIFIC_PASSWORD: ${{ secrets.APPLE_APP_UPLOAD_PASSWORD }}
+          IPA_PATH: build/OasisShoreditch.ipa  # Update this to your IPA path
+        run: |
+          xcrun altool --upload-app \
+            --type ios \
+            --file "$IPA_PATH" \
+            --username "$APPLE_ID" \
+            --password "$APP_SPECIFIC_PASSWORD" \
+            --verbose  # Optional: for detailed logs
+
+      - name: Check Upload Status
+        if: failure()
+        run: |
+          echo "Upload failed. Check the logs above for more details."
